improve tool description